--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Changing password - Troll the Troll" %>
 <div class="flex justify-center">
-  <div class="md:my-10 shadow-md rounded px-8 pt-6 pb-8 mb-4 max-w-sm w-full flex justify-center">
+  <div class="md:my-10 px-8 pt-6 pb-8 mb-4 max-w-sm w-full flex justify-center">
     <div>
       <h2 class="mb-4">Change your password</h2>
 
