--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,10 @@
-<% content_for :title, "Register - Troll the Troll" %>
+<% content_for :title, "Create Account - Troll the Troll" %>
 <div class="flex justify-center">
-  <div class="md:my-10 shadow-md rounded px-8 pt-6 pb-8 mb-4 max-w-sm w-full flex justify-center">
+  <div class="md:my-10 px-8 pt-6 pb-8 mb-4 max-w-sm w-full flex justify-center">
     <div>
       <h2 class="mb-4">Register</h2>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
-
         <div class="form-inputs w-full">
           <%= f.input :username,
                       required: true,
@@ -32,7 +31,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Register", class: "btn my-4" %>
+          <%= f.button :submit, "Create Account", class: "btn my-4" %>
         </div>
       <% end %>
 
