--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -128,9 +128,9 @@ table {
 }
 
 th {
-  @apply px-4 py-2;
+  @apply px-4 py-2 text-xs;
 }
 
 td {
-  @apply border px-4 py-2;
+  @apply border px-4 py-2 text-xs;
 }
