Add more cookies. Change font. Change way of stealing cake

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About</h1>
-<p>This is a hobby app.</p>
+<h2 class="text-3xl font-bold">About the game</h2>
+<p>This website is being developed as an individual hobby project.</p>
+<p>Any suggestions for improvement are welome. You can contact me <a href="mailto:koordynator@zoho.com?subject=feedback">here</a>.</p>
+<p>I would very much appreciate it if you could <%= active_link_to "buy me a coffee", "https://www.buymeacoffee.com/nomideusz", target: :_blank %>. I'm unemployed.</p>
