--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -3,7 +3,7 @@
 @import "tailwindcss/utilities";
 
 body {
-  font-family: 'Andika', sans-serif;
+  font-family: 'Signika Negative', sans-serif;
   @apply bg-gray-800 text-gray-200 p-4;
 }
 
@@ -128,9 +128,9 @@ table {
 }
 
 th {
-  @apply px-4 py-2 text-xs;
+  @apply px-4 py-2;
 }
 
 td {
-  @apply border px-4 py-2 text-xs;
+  @apply border px-4 py-2;
 }
