--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,13 @@
     <%= csp_meta_tag %>
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link href="https://fonts.googleapis.com/css?family=Andika&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Signika+Negative&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <div class="container mx-auto relative">
       <div class="md:absolute md:top-0 md:left-0 mt-4 mb-4 md:mb-0 text-gray-600">
-        v0.1
+        v0.2
       </div>
       <h1 class="text-5xl font-bold text-center mb-6"><%= active_link_to 'Troll The Troll', root_path %></h1>
       <div class="md:absolute md:top-0 md:right-0 mt-4 mb-4 md:mb-0">
@@ -32,7 +32,9 @@
         <% end %>
       </div>
       <%= yield %>
-      <footer class="text-center my-12"><%= get_footer %></footer>
+      <footer class="text-center my-12">
+        <p class="mb-4"><%= active_link_to "About", about_path %></p>
+        <%= get_footer %></footer>
     </div>
   </body>
 </html>
