--- a/app/views/thefts/index.html.erb
+++ b/app/views/thefts/index.html.erb
@@ -22,7 +22,7 @@
   <% else %>
     <%= image_tag "troll02.gif", style: 'height:377px; width:143px;', class: "mr-16" %>
     <div class="relative">
-      <div style="margin-bottom: 200px; margin-left: 20px;" class="absolute bottom-0 text-center">
+      <div style="width: 300px; margin-bottom: 200px; margin-left: -32px;" class="absolute bottom-0 text-center">
         <p class="mb-2"><strong>There is no cookie.</strong></p>
         <p class="mb-2">It was stolen by glutton <strong><%= @last_thief %></strong>.</p>
       </div>
