--- a/app/views/thefts/_form.html.erb
+++ b/app/views/thefts/_form.html.erb
@@ -2,10 +2,14 @@
   <%= f.hidden_field :user_id, value: current_user.id %>
   <%= f.hidden_field :cake_id, value: @cake_id || 0 %>
   <%= f.hidden_field :cake_cal, value: @cake_cal || 100 %>
-  <%= f.hidden_field :time_of_next, value: @time_of_next %>
   <%= f.hidden_field :next_cake_id, value: @next_cake_id || 0 %>
   <%= f.hidden_field :next_cake_cal, value: @next_cake_cal || 100 %>
   <%= f.hidden_field :exact_time_of_previous, value: @exact_time_of_previous %>
   <%= f.hidden_field :exact_time, value: @exact_time %>
-  <%= image_submit_tag "#{@cake_id}.png", style: 'height:auto; width:auto; margin-bottom: 140px; margin-left: 42px;', class: "absolute bottom-0" %>
+  <%= f.hidden_field :puzzle_result, value: @first_number + @second_number %>
+  <div style="margin-bottom: 200px; margin-left: -20px;" class="absolute bottom-0 left-0 bg-color7 p-4 border-2 border-white">
+    <strong><%= "#{@first_number} + #{@second_number}" %></strong>
+    <%= f.input :answer, label: "what's the result?", input_html: {class: 'p-1 mt-2 text-center border border-color6'} %>
+  </div>
+  <%= image_submit_tag "#{@cake_id}.png", style: 'height:auto; width:auto;' %>
 <% end %>
