Complicate puzzle. Make winners of month list. Minor changes in looks

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,9 @@
-<h2 class="text-3xl font-bold">About the game</h2>
-<p>This website is being developed as an individual hobby project.</p>
-<p>Any suggestions for improvement are welome. You can contact me <a href="mailto:koordynator@zoho.com?subject=feedback">here</a>.</p>
-<p>I would very much appreciate it if you could <%= active_link_to "buy me a coffee", "https://www.buymeacoffee.com/nomideusz", target: :_blank %>. I'm unemployed.</p>
+<div class="flex justify-center">
+  <div class="bg-color7 border-2 border-white p-8 inline-block my-8">
+    <h2 class="text-3xl font-bold mb-4">About the game</h2>
+    <p class="mb-2">This game is being developed as an individual hobby project.</p>
+    <p class="mb-2">Any suggestions for improvement are welome. You can contact me <a href="mailto:koordynator@zoho.com?subject=feedback">here</a>.</p>
+    <p class="mb-2">I would very much appreciate it if you could <%= active_link_to "buy me a coffee", "https://www.buymeacoffee.com/nomideusz", target: :_blank %>. I'm unemployed.</p>
+    <p>Filip, thank you for the troll.</p>
+  </div>
+</div>
