--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,21 @@
   </head>
   <body>
     <div class="container mx-auto relative" data-behavior="vue">
-      <div class="md:absolute md:top-0 md:left-0 mt-4 mb-4 md:mb-0 text-gray-100">
+      <div class="absolute top-0 left-0 mt-4 text-gray-100">
         v0.3
       </div>
-      <h1 class="text-5xl font-bold text-center mb-6"><%= active_link_to 'Troll The Troll', root_path %></h1>
-      <div class="md:absolute md:top-0 md:right-0 mt-4 mb-4 md:mb-0 bg-color7 p-2 border-2 border-white">
-        <% if user_signed_in? %>
-          <%= current_user.username %>
-          <%= active_link_to 'Sign out', destroy_user_session_path, method: :delete, class: "ml-1" %>
-        <% else %>
-          <%= active_link_to 'Log in', new_user_session_path, class: "mr-2" %>
-          <%= active_link_to "Create Account", new_user_registration_path %>
-          <%= javascript_pack_tag 'vue_app' %>
-        <% end %>
+      <h1 class="text-3xl md:text-5xl font-bold text-center mb-2 md:mb-6"><%= active_link_to 'Troll The Troll', root_path %></h1>
+      <div class="flex justify-center">
+        <div class="static md:absolute text-center top-0 right-0 mt-0 md:mt-4 mb-4 bg-color7 p-2 border-2 border-white inline-block">
+          <% if user_signed_in? %>
+            <%= current_user.username %>
+            <%= active_link_to 'Sign out', destroy_user_session_path, method: :delete, class: "ml-1" %>
+          <% else %>
+            <%= active_link_to 'Log in', new_user_session_path, class: "mr-2" %>
+            <%= active_link_to "Create Account", new_user_registration_path %>
+            <%= javascript_pack_tag 'vue_app' %>
+          <% end %>
+        </div>
       </div>
       <div class="text-center">
         <% if flash.key?("alert") || flash.key?("notice") %>
