CSS for mobile adjustments

--- a/app/views/thefts/index.html.erb
+++ b/app/views/thefts/index.html.erb
@@ -42,7 +42,7 @@
       <div class="inline-block md:hidden w-full">
         <%= get_troll_small %>
       </div>
-      <div class="relative mt-64 pt-0 lg:mt-0 lg:pt-0">
+      <div class="inline-block relative mt-64 pt-0 lg:mt-0 lg:pt-0">
         <div>
           <%= get_table %>
         </div>
