Add fade in effect

--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -153,3 +153,20 @@ td {
     @apply px-4;
   }
 }
+
+.fade-in {
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: .5s;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
