Remove fade in effect from first record

--- a/app/views/thefts/index.html.erb
+++ b/app/views/thefts/index.html.erb
@@ -57,7 +57,7 @@
             <p>It was stolen by glutton <strong><%= @last_thief %></strong>.</p>
               <ul id="attempts" class="text-xs mb-2">
                 <% @attempts.each do |attempt| %>
-                  <li class="fade-in"><%= get_delays(attempt) %></li>
+                  <li><%= get_delays(attempt) %></li>
                 <% end %>
               </ul>
             <p>Next one will be ready in:</p>
