--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name), class: "block" %>
+  <%= link_to "Forgot your password?", new_password_path(resource_name), class: "block mb-2" %>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
@@ -19,7 +19,6 @@
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: "block mb-2" %>
-  <% end %>
+<%= link_to "Login with Facebook", user_facebook_omniauth_authorize_path, class: 'block loginBtn loginBtn--facebook hover:text-white', style: 'width:210px; margin-top:10px; margin-bottom:10px; margin-left:0' %>
+<%= link_to "Login with Google", user_google_oauth2_omniauth_authorize_path, class: 'block loginBtn loginBtn--google hover:text-white', style: 'width:210px; margin-left:0' %>
 <% end %>
