--- a/app/views/thefts/index.html.erb
+++ b/app/views/thefts/index.html.erb
@@ -117,7 +117,7 @@
 
   <div>
     <table class="mb-8">
-      <caption><strong>Top 10 Fattest in April</strong></caption>
+      <caption><strong>Top 10 Fattest in May</strong></caption>
       <thead>
         <th>No.</th>
         <th>Glutton</th>
@@ -162,7 +162,7 @@
         <% end %>
       </tbody>
     </table>
-    <table>
+    <table class="mb-8">
       <caption><strong>Most greedy in April</strong></caption>
       <thead>
         <th>No.</th>
