--- a/app/views/thefts/index.html.erb
+++ b/app/views/thefts/index.html.erb
@@ -117,7 +117,7 @@
 
   <div>
     <table class="mb-8">
-      <caption><strong>Top 10 Fattest in May</strong></caption>
+      <caption><strong>Top 10 Fattest in June</strong></caption>
       <thead>
         <th>No.</th>
         <th>Glutton</th>
@@ -149,6 +149,29 @@
       <tbody>
         <% i = 1 %>
         <% @most_greedy_yesterday.each do |key, value| %>
+          <tr>
+            <td><%= i %></td>
+            <td>
+              <% if User.exists?(key) %>
+                <%= User.find(key).username %>
+              <% end %>
+            </td>
+            <td><%= value %></td>
+          </tr>
+          <% i += 1 %>
+        <% end %>
+      </tbody>
+    </table>
+    <table class="mb-8">
+      <caption><strong>Most greedy in May</strong></caption>
+      <thead>
+        <th>No.</th>
+        <th>Glutton</th>
+        <th>Kcal</th>
+      </thead>
+      <tbody>
+        <% i = 1 %>
+        <% @top_fattest_may.each do |key, value| %>
           <tr>
             <td><%= i %></td>
             <td>
